sort.basic.bubble.AlgBubbleSort1.scala.error
Erreur de compilation :
AlgBubbleSort1:4: error: value n is not a member of Int
  for(ind<- 0 n-2)
              ^